# WinLIRC

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  bootstrap.bat  getdeps.bat  getwtl.bat  quickstart.bat  vcpkg.json  winlirc.snippet
DLL/: CMakeLists.txt
DLL/AudioCapture/: AnalyseAudio.cpp  AnalyseAudio.h  AudioCapture.aps  AudioCapture.cpp  AudioCapture.rc  AudioCapture.sln  AudioCapture.vcproj  AudioFormats.cpp  AudioFormats.h  CMakeLists.txt  Decode.cpp  Decode.h  Globals.cpp  Globals.h  Hardware.cpp  ReadMe.txt  RecordAudio.cpp  RecordAudio.h  Settings.cpp  Settings.h  StringFunctions.cpp  StringFunctions.h  WinlircAudioIn.cpp  WinlircAudioIn.h  hardware.cpp  hardware.h  resource.h  stdafx.cpp
DLL/Beholder/: BeholdRC.cpp  BeholdRC.h  Beholder.cpp  Beholder.h  CMakeLists.txt  Decode.cpp  Decode.h  Globals.cpp  Globals.h  Hardware.cpp  SendReceiveData.cpp  SendReceiveData.h  beholder.sln  beholder.vcproj  hardware.cpp  readme.md
DLL/Chinavision/: CMakeLists.txt  Chinavision.cpp  Chinavision.h  Chinavision.sln  Chinavision.vcproj  ChinavisionAPI.cpp  ChinavisionAPI.h  Globals.cpp  Globals.h  winusb.h  winusbio.h
DLL/CommandIR/: CMakeLists.txt  CommandIR.cpp  CommandIR.h  CommandIR.sln  CommandIR.vcproj  Decode.cpp  Decode.h  Globals.cpp  Globals.h  Hardware.cpp  LIRCDefines.h  Send.cpp  Send.h  SendReceiveData.cpp  SendReceiveData.h  Settings.cpp  Settings.h  guicon.cpp  guicon.h  hardware.cpp  hardware.h  readme.md  winlirc.c  winlirc.cpp  winlirc.h
DLL/Common/: CMakeLists.txt  DebugOutput.h  Hardware.h  IRRemote.cpp  IRRemote.h  LIRCDefines.h  Linux.cpp  Linux.h  Receive.cpp  Receive.h  SafeBool.h  Send.cpp  Send.h  Socket.h  UniqueHandle.h  WLPluginAPI.h  Win32Helpers.cpp  Win32Helpers.h  enumSerialPorts.h  fifo.h  winlirc_api.h
DLL/Cyberlink/: CMakeLists.txt  CyberLink.cpp  CyberLink.rc  Cyberlink.sln  Cyberlink.vcproj  Globals.cpp  Globals.h  Hardware.cpp  ReceiveData.cpp  ReceiveData.h
DLL/DirectInput/: CMakeLists.txt  DirectInput.sln  DirectInput.vcxproj  directinput.cpp  directinput.def  directinput.rc
DLL/FireFly/: CMakeLists.txt  FireFly.cpp  FireFly.h  FireFly.sln  FireFly.vcproj  Globals.cpp  Globals.h  SendReceiveData.cpp  SendReceiveData.h  hid.h
DLL/Geniatech/: CMakeLists.txt  Decode.cpp  Decode.h  Geniatech-readme.txt  Geniatech.rc  Geniatech.vcproj  GeniatechRC.cpp  GeniatechRC.h  Globals.cpp  Hardware.cpp  LWExtDLL.h  LwExtLib.lib  Receive.cpp  Receive.h  Settings.cpp  Settings.h  hardware.cpp  readme.md  resource.h
DLL/IRMan/: CMakeLists.txt  Decode.cpp  Decode.h  Globals.cpp  Globals.h  Hardware.cpp  IRMan.aps  IRMan.cpp  IRMan.rc  IRMan.sln  IRMan.vcproj  SendReceiveData.cpp  SendReceiveData.h  Serial.cpp  Serial.h  Settings.cpp  hardware.cpp  readme.md  resource.h
DLL/IRToy/: CMakeLists.txt  Globals.cpp  Globals.h  Hardware.cpp  IRToy.aps  IRToy.cpp  IRToy.h  IRToy.rc  IRToy.sln  IRToy.vcproj  Send.cpp  SendReceiveData.cpp  SendReceiveData.h  Serial.h  Settings.cpp  Settings.h  hardware.cpp  readme.md  resource.h
DLL/Iguana/: CMakeLists.txt  Decode.cpp  Globals.cpp  Globals.h  Hardware.cpp  Iguana.aps  Iguana.cpp  Iguana.h  Iguana.rc  Iguana.sln  Iguana.vcproj  LIRCDefines.h  ReceiveData.cpp  ReceiveData.h  Send.cpp  SendReceiveData.cpp  SendReceiveData.h  Settings.cpp  Settings.h  hardware.cpp  iguanaIR.h  iguanaIR.lib  readme.md  resource.h
DLL/Irdroid/: CMakeLists.txt  Globals.cpp  Globals.h  Hardware.cpp  Irdroid.cpp  Irdroid.rc  Irdroid.sln  Irdroid.vcproj  SendReceiveData.cpp  SendReceiveData.h  Serial.h  Settings.cpp  Settings.h  resource.h
DLL/MCE/: CMakeLists.txt  Decode.cpp  Globals.cpp  Globals.h  Hardware.cpp  IrDeviceList.cpp  IrDeviceList.h  MCE.APS  MCE.cpp  MCE.h  MCE.rc  MCEDefines.h  MCEVista.sln  MCEVista.vcproj  Send.cpp  SendReceiveData.cpp  SendReceiveData.h  Settings.cpp  Settings.h  hardware.cpp
DLL/MCE-XP/: CMakeLists.txt  Decode.h  Globals.cpp  Globals.h  Hardware.cpp  IrDeviceList.cpp  IrDeviceList.h  MCE.APS  MCE.cpp  MCE.rc  MCEDefines.h  MCEVista.vcproj  MCEXP.sln  MCEXP.vcproj  Registry.cpp  Registry.h  SendReceiveData.cpp  SendReceiveData.h  Settings.cpp  Settings.h  readme.md  resource.h
DLL/MaxterPlus/: CMakeLists.txt  Globals.cpp  Globals.h  MaxterPlus.aps  MaxterPlus.cpp  MaxterPlus.h  MaxterPlus.rc  MaxterPlus.sln  MaxterPlus.vcproj  MaxterPlusPlugin.cpp  MaxterPlusPlugin.h  SendReceiveData.cpp  SendReceiveData.h  Settings.cpp  Settings.h  pnp.c  readme.md  resource.h
DLL/Serial/: App.cpp  App.h  CMakeLists.txt  Decode.cpp  Decode.h  Globals.cpp  Globals.h  Hardware.cpp  Send.cpp  Send.h  Serial.cpp  Serial.h  SerialDialog.cpp  SerialDialog.h  Settings.cpp  Settings.h  Transmit.cpp  Transmit.h  changes.txt  guicon.cpp  hardware.cpp  irdriver.cpp  irdriver.h  readme.md  resource.h  stdafx.h  winlirc.rc  winlirc.vcproj
DLL/Streamzap/: CMakeLists.txt  Decode.cpp  Globals.cpp  Globals.h  Hardware.cpp  LIRCDefines.h  Streamzap.cpp  Streamzap.h  Streamzap.vcproj  StreamzapAPI.cpp  StreamzapAPI.h  hardware.cpp  irdata.lib
DLL/StreamzapAlternate/: Globals.cpp  Globals.h  Streamzap.cpp  Streamzap.h  Streamzap.sln  Streamzap.vcproj  StreamzapAPI.cpp  StreamzapAPI.h  hardware.cpp  irdata.h
DLL/TbsCxt/: CMakeLists.txt  Decode.cpp  Decode.h  Globals.cpp  Hardware.cpp  Receive.cpp  Receive.h  Settings.cpp  TbsCxt-readme.txt  TbsCxt.rc  TbsCxt.vcproj  TbsCxtRC.cpp  TbsCxtRC.h  (+3 more)
IRRecord/: CMakeLists.txt  Globals.cpp  Globals.h  IRRecord.sln  IRRecord.vcproj  LIRCDefines.h  config.cpp  config.h  dump_config.cpp  dump_config.h  emulation.cpp  emulation.h  hardware.h  irdriver.h  irrecord.cpp
winlirc/: AUTHORS  CMakeLists.txt  IRRemote.cpp  IRRemote.h  InputPlugin.cpp  InputPlugin.h  Plugin.cpp  Plugin.h  README  Receive.cpp  Receive.h  Send.cpp  Send.h  changes.txt  confdlg.cpp  confdlg.h  config.cpp  config.h  constants.h  dll.h  drvdlg.cpp  drvdlg.h  dumpcfg.cpp  dumpcfg.h  globals.cpp  globals.h  guicon.cpp  guicon.h  ir_remote.cpp  ir_remote.h  irconfig.cpp  irconfig.h  irdriver.cpp  irdriver.h  learndlg.cpp  learndlg.h  pre2 changes.txt  readme.md  remote.cpp  remote.h  (+26 more)
(+408 files in other folders)
