add_subdirectory(AudioCapture)
add_subdirectory(Beholder)
add_subdirectory(Chinavision)
add_subdirectory(CommandIR)
add_subdirectory(Common)
add_subdirectory(FireFly)
add_subdirectory(Geniatech)
add_subdirectory(hauppauge)
add_subdirectory(Iguana)
add_subdirectory(IRMan)
add_subdirectory(ir-tiny)
add_subdirectory(IRToy)
add_subdirectory(MaxterPlus)
add_subdirectory(MCE)
add_subdirectory(MCE-XP)
add_subdirectory(Serial)
add_subdirectory(Streamzap)
add_subdirectory(TbsCxt)
#add_subdirectory(TbsNxp)
add_subdirectory(TbsQBOX)
add_subdirectory(Technisat)
add_subdirectory(Technotrend)
#add_subdirectory(Technotrend-BDA)
add_subdirectory(TeVii)
add_subdirectory(Tira)
add_subdirectory(UDP)
add_subdirectory(Xbox360)
