macro(add_plugin plugin_name)
  option(EnablePlugin_${plugin_name} "Enable input plugin ${plugin_name}" ON)
  if (EnablePlugin_${plugin_name})
    add_subdirectory(${plugin_name})
  endif()
endmacro()

add_plugin(AudioCapture)
add_plugin(Beholder)
add_plugin(Chinavision)
add_plugin(CommandIR)
add_plugin(Cyberlink)
add_plugin(DirectInput)
add_plugin(FireFly)
add_plugin(Geniatech)
add_plugin(hauppauge)
add_plugin(Iguana)
add_plugin(IRMan)
add_plugin(ir-tiny)
add_plugin(Irdroid)
add_plugin(IRToy)
add_plugin(MaxterPlus)
add_plugin(MCE)
add_plugin(MCE-XP)
add_plugin(Serial)
add_plugin(Streamzap)
add_plugin(TbsCxt)
#add_plugin(TbsNxp)
add_plugin(TbsQBOX)
add_plugin(Technisat)
add_plugin(Technotrend)
#add_plugin(Technotrend-BDA)
add_plugin(TeVii)
add_plugin(Tira)
add_plugin(UDP)
add_plugin(Xbox360)
